<resources>
    <string name="app_name">My FBLA Chapter</string>
    <string name="facebook_app_id">824878607959677</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About FBLA</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_comps">Competitive Events</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_about_chapter">My Chapter</string>
    <string name="menu_my_events">My Events</string>
    <string name="menu_officer">Officer Team</string>

    <string name="fb_login_protocol_scheme">fb824878607959677</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="title_activity_comp_detail">CompDetailActivity</string>


    <!--    <string name="default_web_client_id">968052628426-1jl22qaspvgnminmiba4qm25f3kbmnvn.apps.googleusercontent.com</string>-->

</resources>
