<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hhsfbla.mad.activities.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about_chapter"
        android:name="com.hhsfbla.mad.activities.ui.AboutChapterFragment"
        android:label="@string/menu_about_chapter"
        tools:layout="@layout/fragment_about_chapter" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.hhsfbla.mad.activities.ui.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.hhsfbla.mad.activities.ui.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_comps"
        android:name="com.hhsfbla.mad.activities.ui.CompsFragment"
        android:label="@string/menu_comps"
        tools:layout="@layout/fragment_comps" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.hhsfbla.mad.activities.ui.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_my_events"
        android:name="com.hhsfbla.mad.activities.ui.MyEventsFragment"
        android:label="@string/menu_my_events"
        tools:layout="@layout/fragment_my_events" />
    <fragment
        android:id="@+id/nav_officer"
        android:name="com.hhsfbla.mad.activities.ui.OfficerFragment"
        android:label="@string/menu_officer"
        tools:layout="@layout/fragment_officer" />

</navigation>