<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_about" >
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contact" />
        </item>
        <item
            android:id="@+id/nav_comps"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_comps" />


    <menu>
        <item
            android:id="@+id/nav_my_events"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_my" />

    </menu>

    </group>

</menu>
